# razel-host

./: BUILD.bazel  Cargo.toml
src/: lib.rs  local_exec.rs  module_config.rs  rust_toolchain.rs  workspace.rs
tests/: build_slice.rs  external_roots.rs  glob_build.rs  integration.rs  local_exec.rs  module_toolchains.rs  pkg_loads.rs  rules_rust_compat.rs  rust_fat_selfhost.rs  rust_p1.rs  rust_rules.rs  rust_third_party.rs  select_resolution.rs  self_host.rs  visibility.rs
tests/fixtures/bazel_tools_stub/: BUILD.bazel
tests/fixtures/bazel_tools_stub/tools/build_defs/cc/: action_names.bzl
tests/fixtures/cc_compatibility_proxy/: BUILD.bazel  symbols.bzl
tests/integration/: analysis.rs  bzl_load.rs  common.rs  execution.rs  main.rs  package.rs  rule_machinery.rs  source_glob.rs  toolchain.rs
