[package]
name = "razel-host"
version = "0.1.0"
edition = "2021"
description = "razelv4 composition root: wires a System impl + the incremental Engine + source node-kinds (role: root)."

[dependencies]
razel-core = { path = "../razel-core", version = "0.1.0" }
razel-ids = { path = "../razel-ids", version = "0.1.0" }
razel-engine-api = { path = "../razel-engine-api", version = "0.1.0" }
razel-engine = { path = "../razel-engine", version = "0.1.0" }   # IMPL — permitted: this is the composition root
razel-os-api = { path = "../razel-os-api", version = "0.1.0" }
razel-source = { path = "../razel-source", version = "0.1.0" }
razel-load = { path = "../razel-load", version = "0.1.0" }
razel-package = { path = "../razel-package", version = "0.1.0" }
razel-analysis = { path = "../razel-analysis", version = "0.1.0" }
razel-toolchain = { path = "../razel-toolchain", version = "0.1.0" }
razel-action = { path = "../razel-action", version = "0.1.0" }
razel-exec-api = { path = "../razel-exec-api", version = "0.1.0" }
razel-bzl-api = { path = "../razel-bzl-api", version = "0.1.0" }
razel-bzl-starlark = { path = "../razel-bzl-starlark", version = "0.1.0" }  # IMPL — permitted: composition root

[features]
# Pass-through so `cargo test -p razel-host --features <mutant>` drives a downstream mutant end-to-end
# (turns the relevant integration test RED — red-first evidence for the protected property).
mutant_file_hashes_stat = ["razel-source/mutant_file_hashes_stat"]
mutant_package_ignore_loads = ["razel-package/mutant_package_ignore_loads"]
mutant_package_allow_dup_names = ["razel-bzl-starlark/mutant_package_allow_dup_names"]
mutant_ct_drops_config = ["razel-analysis/mutant_ct_drops_config"]
mutant_ct_skips_rule_file_dep = ["razel-analysis/mutant_ct_skips_rule_file_dep"]
mutant_ct_drops_toolchains = ["razel-analysis/mutant_ct_drops_toolchains"]
mutant_ct_absorbs_missing_config = ["razel-analysis/mutant_ct_absorbs_missing_config"]
mutant_exec_hardcodes_output = ["razel-action/mutant_exec_hardcodes_output"]
mutant_toolchain_ignores_constraints = ["razel-toolchain/mutant_toolchain_ignores_constraints"]
