[package]
name = "razel-host"
version = "0.1.0"
edition = "2021"
description = "razelv4 composition root: wires a System impl + the incremental Engine + source node-kinds (role: root)."
license = "MIT OR Apache-2.0"

[dependencies]
razel-core = { path = "../razel-core", version = "0.1.0" }
razel-ids = { path = "../razel-ids", version = "0.1.0" }
razel-engine-api = { path = "../razel-engine-api", version = "0.1.0" }
razel-engine = { path = "../razel-engine", version = "0.1.0" }   # IMPL — permitted: this is the composition root
razel-os-api = { path = "../razel-os-api", version = "0.1.0" }
razel-source = { path = "../razel-source", version = "0.1.0" }
razel-load = { path = "../razel-load", version = "0.1.0" }
razel-package = { path = "../razel-package", version = "0.1.0" }
razel-analysis = { path = "../razel-analysis", version = "0.1.0" }
razel-toolchain = { path = "../razel-toolchain", version = "0.1.0" }
razel-action = { path = "../razel-action", version = "0.1.0" }
razel-exec-api = { path = "../razel-exec-api", version = "0.1.0" }
razel-bzl-api = { path = "../razel-bzl-api", version = "0.1.0" }
razel-bzl-starlark = { path = "../razel-bzl-starlark", version = "0.1.0" }  # IMPL — permitted: composition root

[dev-dependencies]
# The real `System` impl, for the REAL-execution proof (tests/local_exec.rs): a genrule-style spawn action
# runs an ACTUAL subprocess over `DarwinSystem`, with incrementality driven directly against the `Engine`
# (evaluate/Diff/recomputes — a razel-host-only surface). razel-host is a `root`, so wiring an impl is in
# role; seams.json grants the (test-only) edge.
razel-os-darwin = { path = "../razel-os-darwin", version = "0.1.0" }

[features]
# Pass-through so `cargo test -p razel-host --features <mutant>` drives a downstream mutant end-to-end
# (turns the relevant integration test RED — red-first evidence for the protected property).
mutant_file_hashes_stat = ["razel-source/mutant_file_hashes_stat"]
mutant_glob_depends_on_content = ["razel-source/mutant_glob_depends_on_content"]
mutant_package_ignore_loads = ["razel-package/mutant_package_ignore_loads"]
mutant_package_allow_dup_names = ["razel-bzl-starlark/mutant_package_allow_dup_names"]
mutant_ct_drops_config = ["razel-analysis/mutant_ct_drops_config"]
mutant_ct_skips_rule_file_dep = ["razel-analysis/mutant_ct_skips_rule_file_dep"]
mutant_ct_drops_toolchains = ["razel-analysis/mutant_ct_drops_toolchains"]
mutant_ct_absorbs_missing_config = ["razel-analysis/mutant_ct_absorbs_missing_config"]
mutant_exec_hardcodes_output = ["razel-action/mutant_exec_hardcodes_output"]
mutant_completion_skips_artifact_demand = ["razel-action/mutant_completion_skips_artifact_demand"]
mutant_artifact_projection_fabricates_digest = ["razel-action/mutant_artifact_projection_fabricates_digest"]
mutant_action_skips_input_artifact_edges = ["razel-action/mutant_action_skips_input_artifact_edges"]
mutant_dup_output_last_writer_wins = ["razel-action/mutant_dup_output_last_writer_wins"]
mutant_input_resolver_absorbs_unknown = ["razel-action/mutant_input_resolver_absorbs_unknown"]
mutant_toolchain_ignores_constraints = ["razel-toolchain/mutant_toolchain_ignores_constraints"]
mutant_toolchain_registered_set_not_a_dep = ["razel-toolchain/mutant_toolchain_registered_set_not_a_dep"]
mutant_toolchain_exec_selection_first_candidate = ["razel-toolchain/mutant_toolchain_exec_selection_first_candidate"]
# build-verb slice (BAR-FIRST-SLICE execution leg): the emit is DROPPED — TARGET_COMPLETION is still
# requested (the graph builds) but the produced output never reaches disk. Drives tests/build_slice.rs RED.
mutant_build_skips_output_emit = []
# real-execution leg (LocalSpawnStrategy). RED-FIRST: staging SKIPS an input file → the subprocess (a
# genrule `cat <in> > <out>`) cannot read it, exits nonzero, and the spawn fails closed → the real-exec
# proof (tests/local_exec.rs) goes RED. Never enable in a real build.
mutant_stage_drops_input = []
# real-execution leg (LocalSpawnStrategy). RED-FIRST (the local kin of mutant_exec_hardcodes_output):
# collect returns FABRICATED bytes instead of READING the staged output file → the output-bytes assertion
# fails → tests/local_exec.rs goes RED. Never enable in a real build.
mutant_collect_fabricates_output = []
